Refactor sidebar component to display user email and create dashboard button

--- a/libs/sidebar/sidebar.component.html
+++ b/libs/sidebar/sidebar.component.html
@@ -1,15 +1,22 @@
 <ng-container *ngIf="vm$ | async as vm">
-  <div class="d-flex flex-column vh-100 p-3 bg-light" style="width: 320px">
-    <button class="btn btn-sm btn-primary mb-3" (click)="onCreateDashboard(vm.user)" *ngIf="vm.user">
-      Create one dashboard
-    </button>
+  <ng-container *ngIf="vm.user as user">
+    <div class="d-flex flex-column vh-100 p-3 bg-light" style="width: 320px">
+      <p class="text-center bg-body-secondary rounded-pill py-2">
+        <i class="bi bi-person"></i>
+        {{ user.email }}
+      </p>
 
-    <h3>Dashboards</h3>
+      <h3>Dashboards</h3>
 
-    <p class="mb-auto" *ngIf="!vm.dashboards.length">No dashboard found, create one!</p>
-
-    <ng-container *ngIf="vm.dashboards.length">
       <div class="d-flex flex-column gap-1 mb-auto">
+        <button
+          class="btn btn-sm btn-outline-secondary border border-0 text-start"
+          (click)="onCreateDashboard(vm.user, vm.dashboards.length)"
+        >
+          <i class="bi bi-plus-lg"></i>
+          Create one
+        </button>
+
         <ng-container *ngFor="let dashboard of vm.dashboards">
           <a
             class="btn btn-sm btn-outline-secondary border border-0 text-start text-nowrap text-truncate overflow-hidden"
@@ -19,12 +26,14 @@
             {{ dashboard.name }}
           </a>
         </ng-container>
+        <ng-container *ngIf="!vm.dashboards.length">
+          <p class="text-muted text-start">It's empty here. Create one!</p>
+        </ng-container>
       </div>
-    </ng-container>
 
-    <div class="d-flex flex-column align-items-center gap-2" *ngIf="vm.user as user">
-      <p class="fw-semibold mb-0">{{ user.email }}</p>
-      <button class="btn btn-sm btn-outline-danger w-100" (click)="onSignOut()">Sign out</button>
+      <div class="d-flex flex-column align-items-center gap-2">
+        <button class="btn btn-sm btn-outline-danger w-100" (click)="onSignOut()">Sign out</button>
+      </div>
     </div>
-  </div>
+  </ng-container>
 </ng-container>
