Add reset password functionality

--- a/libs/auth/sign-in/sign-in.component.html
+++ b/libs/auth/sign-in/sign-in.component.html
@@ -17,7 +17,7 @@
       <button class="btn btn-primary" type="submit">Sign in</button>
 
       <div class="d-flex flex-column align-items-center gap-3">
-        <!-- <a class="link-primary" routerLink="/auth/reset-password">Forgot password?</a> -->
+        <a class="link-primary" routerLink="/auth/reset-password">Forgot password?</a>
         <p>
           First time here?
           <a class="link-primary" routerLink="/auth/sign-up">Sign up</a>
