--- a/libs/auth/reset-password/reset-password.component.html
+++ b/libs/auth/reset-password/reset-password.component.html
@@ -1,32 +1,16 @@
-<ng-container *ngIf="vm$ | async as vm">
-  <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
-    <h2>Reset your password</h2>
-
-    <ng-container *ngIf="vm.alert">
-      <ng-container *ngIf="vm.alert.type === 'error'">
-        <div class="alert alert-danger" role="alert">{{ vm.alert.message }}</div>
-      </ng-container>
-      <ng-container *ngIf="vm.alert.type === 'success'">
-        <div class="alert alert-success" role="alert">{{ vm.alert.message }}</div>
-      </ng-container>
-    </ng-container>
+<div class="d-flex wh-100 vh-100 justify-content-center align-items-center bg-light-sublte">
+  <div class="d-flex flex-column rounded p-3 gap-3 bg-light">
+    <h3>Reset your password</h3>
 
     <div class="form-floating">
-      <input class="form-control" type="email" id="email" formControlName="email" placeholder="Email" />
+      <input class="form-control" type="email" id="email" [formControl]="email" placeholder="Email" />
       <label class="form-label" for="email">Email</label>
     </div>
 
-    <ng-container *ngIf="vm.loading">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </ng-container>
-    <ng-container *ngIf="!vm.loading">
-      <button class="btn btn-primary" type="submit">Continue</button>
-    </ng-container>
+    <button class="btn btn-primary" (click)="onResetPassword()">Continue</button>
 
     <div class="text-center">
       <a class="link-primary" routerLink="/login">Back to sign in</a>
     </div>
-  </form>
-</ng-container>
+  </div>
+</div>
