Update page titles

--- a/libs/auth/sign-up/sign-up.component.html
+++ b/libs/auth/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex wh-100 vh-100 justify-content-center align-items-center bg-light-sublte">
   <div class="d-flex flex-column rounded p-3 bg-light">
-    <h1 class="text-center">Dayta</h1>
+    <h1 class="text-center">DaytaFlow</h1>
     <p class="lead text-center text-nowrap">Keep track of non-automated data</p>
 
     <form class="d-flex flex-column gap-3 mb-3" [formGroup]="signUpForm" (ngSubmit)="onRegister()">
